# C-Coding-Practice

./: README.md
ApprovalSystem/: .cproject  .project  CMakeLists.txt  Employee.hpp  RegularEmployee.hpp  TeamLeader.hpp  main  main.cpp
BSTInsert/: main.cpp
BinaryHeapInsertion/: main.cpp
BoxIt_HR/: Box.cpp  Box.hpp  CMakeLists.txt  main.cpp  newExp.txt
ChatRoom/: .cproject  CMakeLists.txt  ChatRoom.cpp  ChatRoom.hpp  Person.cpp  Person.hpp  main.cpp
Class&Object_HR/: CMakeLists.txt  Student.cpp  Student.hpp  main.cpp
Compare_Linked_List_HR/: CMakeLists.txt  main.cpp
Compare_Linked_List_HR/RequiredFiles/: CMakeLists.txt  SinglyLinkedList.cpp  SinglyLinkedList.hpp  singlyLinkedListNode.cpp  singlyLinkedListNode.hpp
Compare_Linked_List_HR/Test/: CMakeLists.txt  test.cpp
DynamicCastPractice/: main.cpp  result
FunctionTimeMeasurement/: main.cpp
FunctionTimeMeasurement/Days Between Dates/: main.cpp  result
FunctionTimeMeasurement/Function_execution_time/: result
Game_TemplateMethod2/: .cproject  .project  CMakeLists.txt  Chess.cpp  Chess.hpp  Game.hpp  main.cpp
InterfaceSegregationRev/: main.cpp
Interface_segregration_practice/: main.cpp
LiskovSubstitution/: main.cpp  result
LiskovSubstitutionRev/: main.cpp  main.out
MarsRover/: .~lock.C++ ROVERS TASK.docx#  C++ ROVERS TASK.docx  CMakeLists.txt  input.txt  main.cpp
MarsRover/SRC/: Exception.hpp  MovingRover.hpp  Rover.hpp  RoverData.hpp
MarsRover/TEST/: CMakeLists.txt  test.cpp
ObserverPattern/: .cproject  CMakeLists.txt  Observer.hpp  Observerable.hpp  main.cpp
OpenClosedRev/: main.cpp  main.out
Open_Closed_Practice/: main.cpp  result
PasswordGenerator/: basic_password_generator.hpp  composite_password_generator.hpp  digit_generator.hpp  lower_letter_generator.hpp  main.cpp  out.out  password_generator.hpp  symbol_generator.hpp  upper_letter_generator.hpp
SRP_Practice/: PersonalFile  main.cpp  result
SSNumberMyLogic/: CMakeLists.txt  DateGenerator.hpp  GeneratorFactory.hpp  main.cpp  northeria.hpp  southeria.hpp
SSNumberMyLogic/SSNumber/: .cproject  .project
SSNumberMyLogic/TEST/: CMakeLists.txt  NortheriaTest.cpp
SSNumberMyLogic2/: .cproject  .project  CMakeLists.txt  Country.hpp  Factory.hpp  Northeria.hpp  Southeria.hpp  main.cpp
SingleResponsibilityRev/: Saving2  main.cpp  main.out
SoundExTDD/: CMakeLists.txt  Soundex.hpp  SoundexTest.cpp
StrategyExercise/: .cproject  .project  CMakeLists.txt  main.cpp
TCPConnection/: .cproject  .project  CMakeLists.txt  TCPConnection.hpp  TCPState.hpp  main.cpp
textFormatter/: .cproject  .project  CMakeLists.txt  HTML.cpp  HTML.hpp  ListStrategy.hpp  Markdown.cpp  Markdown.hpp  TextFormatter.hpp  main.cpp
